mutants.out/log/src__tls.rs_line_116_col_9.log

*** src/tls.rs:116:9: replace <impl Reconnect for TlsStream<S>>::reconnect -> io::Result<Self> with Ok(Default::default())

*** mutation diff:
--- src/tls.rs
+++ replace <impl Reconnect for TlsStream<S>>::reconnect -> io::Result<Self> with Ok(Default::default())
@@ -108,24 +108,17 @@
 }
 
 #[async_trait::async_trait]
 impl<S> Reconnect for TlsStream<S>
 where
     S: AsyncRead + AsyncWrite + Send + Unpin + Reconnect + Debug + 'static + Sync,
 {
     async fn reconnect(&mut self) -> io::Result<Self> {
-        let stream = self
-            .stream
-            .get_mut()
-            .get_mut()
-            .get_mut()
-            .reconnect()
-            .await?;
-        Self::new(stream, self.connector.clone(), &self.hostname).await
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl<S> Deref for TlsStream<S> {
     type Target = NativeTlsStream<S>;
     fn deref(&self) -> &Self::Target {
         &self.stream
     }


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
    Finished dev [unoptimized + debuginfo] target(s) in 0.11s

*** result: Success

*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml --locked --all-features --all-targets
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0277]: the trait bound `tls::TlsStream<S>: Default` is not satisfied
   --> src/tls.rs:116:12
    |
116 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `tls::TlsStream<S>`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
